end UI and all services

--- a/src/main/webapp/WEB-INF/views/templates/authentication.html
+++ b/src/main/webapp/WEB-INF/views/templates/authentication.html
@@ -32,10 +32,7 @@
             <div class="form-group">
                 <label for="inputPassword">Password</label>
                 <input type="password" name="auth_password" class="form-control" id="inputPassword"
-                       placeholder="Your password">
-                <small id="passwordHelpBlock" class="form-text text-muted">
-                    Your password must be no more than 10 symbols
-                </small>
+                       placeholder="Your password" maxlength="10">
             </div>
             <input class="submit-btn btn btn-primary btn-block" type="submit" value="Sign In">
         </form>
