--- a/src/main/webapp/WEB-INF/views/templates/listTeachers.html
+++ b/src/main/webapp/WEB-INF/views/templates/listTeachers.html
@@ -2,31 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>e-Journal | Teachers List</title>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/small_icon.png" th:href="@{/img/small_icon.png}">
-
+    <th:block th:include="fragment.html :: headerfiles"></th:block>
 </head>
 <body>
 
-<header>
-    <div></div>
-</header>
-
-<main class="container-fluid">
-    <div th:switch="${teachers}" class="container my-5">
+<main class="container-fluid my-3">
+    <div class="btn-group-lg text-center" role="group" aria-label="Basic example">
+        <a class="btn btn-success" th:href="@{/index}">Main</a>
+        <a class="btn btn-primary" th:href="@{/admins}">Menu</a>
+        <a class="btn btn-outline-secondary" th:href="@{/logout}">Logout</a>
+    </div>
+    <div th:switch="${teachers}" class="container my-3">
         <div class="row">
-            <div class="col-md-12">
-                <a class="btn btn-primary" th:href="@{/admins}">Main</a>
-                <h2 th:case="null">No Teachers yet!</h2>
+            <div class="col"></div>
+            <div class="col-10">
+                <h2 class="text-center" th:case="null">No Teachers yet!</h2>
                 <div th:case="*">
-                    <h2 class="my-5">Teachers</h2>
-                    <p class="my-5"><a th:href="@{/teachers/showSignUp}" class="btn btn-success"><i
+                    <h2 class="text-center my-3">Teachers</h2>
+                    <p class="my-2"><a th:href="@{/teachers/showSignUp}" class="btn btn-success"><i
                             class="fas fa-user-plus ml-2"></i> Create</a></p>
                     <table class="table table-striped table-responsive-md">
                         <thead>
@@ -57,30 +50,22 @@
                                 </div>
                             </td>
 
-                            <td><a th:href="@{/teachers/showUpdate/{id}(id=${teacher.id})}" class="btn btn-success"><i
+                            <td><a th:href="@{/teachers/showUpdate/{id}(id=${teacher.id})}" class="btn btn-info"><i
                                     class="far fa-edit"></i> Edit</a></td>
-                            <td><a th:href="@{/teachers/deleteTeacher/{id}(id=${teacher.id})}" class="btn btn-secondary"><i
-                                    class="far fa-trash-alt"></i> Delete</a></td>
+                            <td><a th:href="@{/teachers/deleteTeacher/{id}(id=${teacher.id})}"
+                                   class="btn btn-secondary"><i
+                                    class="far fa-trash-alt"></i></a></td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+            <div class="col"></div>
         </div>
     </div>
 </main>
 
-<footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-</footer>
+<footer th:insert="fragment.html :: footer"></footer>
 
 </body>
 </html>
