--- a/src/main/webapp/WEB-INF/views/templates/signUpPupil.html
+++ b/src/main/webapp/WEB-INF/views/templates/signUpPupil.html
@@ -2,26 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>e-Journal | Sign Up Pupil</title>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/small_icon.png" th:href="@{/img/small_icon.png}">
-
+    <th:block th:include="fragment.html :: headerfiles"></th:block>
 </head>
 <body>
 
-<header>
-    <div></div>
-</header>
-
 <main class="container-fluid ">
     <div class="container my-5 ">
-        <h2 class="mb-5">New Pupil</h2>
+        <h2 class="mb-5 text-center">New Pupil</h2>
         <div class="row">
+            <div class="col"></div>
             <div class="col-md-6">
                 <form action="#" th:action="@{/pupils/signUpPupil}" th:object="${pupil}" method="post">
                     <div class="row">
@@ -54,7 +43,8 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="dob" class="col-form-label">Date of birth</label>
-                            <input type="date" th:field="*{dob}" class="form-control" id="dob" placeholder="Date of Birth">
+                            <input type="date" th:field="*{dob}" class="form-control" id="dob"
+                                   placeholder="Date of Birth">
                             <span th:if="${#fields.hasErrors('dob')}" th:errors="*{dob}"
                                   class="text-danger"></span>
                         </div>
@@ -71,28 +61,20 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 mt-5">
-                            <input type="submit" class="btn btn-primary" value="Sign Up Pupil">
-                            <a class="btn btn-primary" th:href="@{/pupils/choosePupilsClass}">Cancel</a>
+                        <div class="col"></div>
+                        <div class="col-md-6 mt-5 text-right">
+                            <input type="submit" class="btn btn-primary" value="Sign Up">
+                            <a class="btn btn-secondary" th:href="@{/pupils/choosePupilsClass}">Cancel</a>
                         </div>
                     </div>
                 </form>
             </div>
+            <div class="col"></div>
         </div>
     </div>
 </main>
 
-<footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-</footer>
+<footer th:insert="fragment.html :: footer"></footer>
 
 </body>
 </html>
