--- a/src/main/webapp/WEB-INF/views/templates/updatePupil.html
+++ b/src/main/webapp/WEB-INF/views/templates/updatePupil.html
@@ -2,26 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>e-Journal | Update pupil</title>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/small_icon.png" th:href="@{/img/small_icon.png}">
-
+    <th:block th:include="fragment.html :: headerfiles"></th:block>
 </head>
 <body>
 
-<header>
-    <div></div>
-</header>
-
 <main class="container-fluid">
     <div class="container my-5">
-        <h2 class="mb-5">Update Pupil</h2>
+        <h2 class="mb-5 text-center">Update Pupil</h2>
         <div class="row">
+            <div class="col"></div>
             <div class="col-md-6">
                 <form action="#" th:action="@{/pupils/updatePupil/{id}(id=${pupil.id})}" th:object="${pupil}"
                       method="post">
@@ -72,24 +61,30 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 mt-5">
-                            <input type="submit" class="btn btn-primary" value="Update Pupil">
-                            <a class="btn btn-primary" th:href="@{/pupils/choosePupilsClass}">Cancel</a>
+                        <div class="col mt-5 text-left">
+                            <p th:if="${parent == null}" class="my-1"><a
+                                    th:href="@{/parents/showSignUp/{id}(id=${pupil.id})}" class="btn btn-success"><i
+                                    class="fas fa-user-plus ml-2"></i> Create Parent</a></p>
+                        </div>
+                        <div class="col-md-6 mt-5 text-right">
+                            <input type="submit" class="btn btn-primary" value="Update">
+                            <a class="btn btn-secondary" th:href="@{/pupils/choosePupilsClass}">Cancel</a>
                         </div>
                     </div>
                 </form>
             </div>
+            <div class="col"></div>
         </div>
     </div>
-    <div th:switch="${parent}" class="container my-1">
+    <div th:switch="${parent}" class="container my-3">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col"></div>
+            <div class="col-3">
                 <div th:case="null">
-                    <p class="my-1"><a th:href="@{/parents/showSignUp/{id}(id=${pupil.id})}" class="btn btn-success"><i
-                            class="fas fa-user-plus ml-2"></i> Create Parent</a></p>
+
                 </div>
                 <div th:case="*">
-                    <h2 class="my-5">Parent</h2>
+                    <h2 class="my-3 text-center">Parent</h2>
                     <table class="table table-striped table-responsive-md">
                         <thead>
                         <tr>
@@ -101,27 +96,18 @@
                         <tr>
                             <td th:text="${parent.login}"></td>
                             <td><a th:href="@{/parents/deleteParent/{id}(id=${parent.id})}" class="btn btn-secondary"><i
-                                    class="far fa-trash-alt"></i> Delete</a></td>
+                                    class="far fa-trash-alt"></i></a></td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+            <div class="col"></div>
         </div>
     </div>
 </main>
 
-<footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-</footer>
+<footer th:insert="fragment.html :: footer"></footer>
 
 </body>
 </html>
