--- a/src/main/webapp/WEB-INF/views/templates/updatePupil.html
+++ b/src/main/webapp/WEB-INF/views/templates/updatePupil.html
@@ -44,7 +44,7 @@
                         <div class="form-group col-md-6">
                             <label for="dob" class="col-form-label">Date of birth</label>
                             <input type="date" th:field="*{dob}" class="form-control" id="dob"
-                                   placeholder="Date of Birth">
+                                   placeholder="Date of Birth" required>
                             <span th:if="${#fields.hasErrors('dob')}" th:errors="*{dob}"
                                   class="text-danger"></span>
                         </div>
