--- a/src/main/webapp/WEB-INF/views/templates/authentication.html
+++ b/src/main/webapp/WEB-INF/views/templates/authentication.html
@@ -24,14 +24,14 @@
          </span>
 
         </div>
-        <form th:action="@{/j_spring_security_check}" method="post">
+        <form th:action="@{/authenticate}" method="post">
             <div class="form-group">
                 <label for="inputLogin">Login</label>
-                <input type="text" name="auth_login" class="form-control" id="inputLogin" placeholder="Your login">
+                <input type="text" name="username" class="form-control" id="inputLogin" placeholder="Your login">
             </div>
             <div class="form-group">
                 <label for="inputPassword">Password</label>
-                <input type="password" name="auth_password" class="form-control" id="inputPassword"
+                <input type="password" name="password" class="form-control" id="inputPassword"
                        placeholder="Your password" maxlength="10">
             </div>
             <input class="submit-btn btn btn-primary btn-block" type="submit" value="Sign In">
