--- a/src/main/webapp/WEB-INF/views/templates/lessonPupilsList.html
+++ b/src/main/webapp/WEB-INF/views/templates/lessonPupilsList.html
@@ -35,7 +35,7 @@
                             </div>
 
                             <div class="form-group col-md-2">
-                                <input type="number" name="newGrade" min="1" max="10" class="form-control">
+                                <input type="number" name="newGrade" min="1" max="10" class="form-control" required>
                             </div>
                             <input type="hidden" name="pupilId" th:value="${pupil.id}">
                             <input type="hidden" name="disciplineId" th:value="${discipline.id}">
@@ -43,7 +43,8 @@
                             <div class="form-group col-md-2">
                                 <button type="submit" name="action" value="update" class="btn btn-success"><i
                                         class="far fa-edit"></i></button>
-                                <button type="submit" name="action" value="delete" class="btn btn-secondary"><i
+                                <button type="submit" name="action" value="delete" class="btn btn-secondary"
+                                        formnovalidate><i
                                         class="far fa-trash-alt"></i></button>
                             </div>
                             <div class="col"></div>
