--- a/src/main/webapp/WEB-INF/views/templates/teacherLessonPage.html
+++ b/src/main/webapp/WEB-INF/views/templates/teacherLessonPage.html
@@ -17,7 +17,8 @@
                         <div class="col"></div>
                         <div class="form-group col-md-6">
                             <label for="inputState" class="col-form-label">Disciplines</label>
-                            <select name="discipline" id="inputState" class="form-control">
+                            <select name="discipline" id="inputState" class="form-control" required>
+                                <option disabled selected value> -- </option>
                                 <option th:each="discipline : ${teacherDisciplines}"
                                         th:value="${discipline.id}"
                                         th:text="${discipline.name}">
@@ -26,7 +27,8 @@
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputState1" class="col-form-label">Classes</label>
-                            <select name="aClass" id="inputState1" class="form-control">
+                            <select name="aClass" id="inputState1" class="form-control" required>
+                                <option disabled selected value> -- </option>
                                 <option th:each="aClass : ${aClasses}"
                                         th:value="${aClass.id}"
                                         th:text="${aClass.name}">
