--- a/src/main/webapp/WEB-INF/views/templates/journalIn.html
+++ b/src/main/webapp/WEB-INF/views/templates/journalIn.html
@@ -17,6 +17,7 @@
                         <div class="form-group col-md-5">
                             <label for="inputState" class="col-form-label">Discipline</label>
                             <select name="discipline" id="inputState" class="form-control" required>
+                                <option disabled selected value> -- </option>
                                 <option th:each="discipline : ${teacherDisciplines}"
                                         th:value="${discipline.id}"
                                         th:text="${discipline.name}">
@@ -26,6 +27,7 @@
                         <div class="form-group col-md-3">
                             <label for="inputState1" class="col-form-label">Class</label>
                             <select name="aClass" id="inputState1" class="form-control" required>
+                                <option disabled selected value> -- </option>
                                 <option th:each="aClass : ${aClasses}"
                                         th:value="${aClass.id}"
                                         th:text="${aClass.name}">
