--- a/src/main/webapp/WEB-INF/views/templates/signUpParent.html
+++ b/src/main/webapp/WEB-INF/views/templates/signUpParent.html
@@ -18,7 +18,7 @@
                         <div class="form-group col-md-6">
                             <label for="login" class="col-form-label">Login</label>
                             <input type="text" th:field="*{login}" class="form-control" id="login"
-                                   placeholder="Login">
+                                   placeholder="Login" required>
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}"
                                   class="text-danger"></span>
                         </div>
@@ -26,7 +26,7 @@
                         <div class="form-group col-md-6">
                             <label for="password" class="col-form-label">Password</label>
                             <input type="password" th:field="*{password}" class="form-control" id="password"
-                                   placeholder="Password" maxlength="10">
+                                   placeholder="Password" maxlength="10" required>
                             <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
                                   class="text-danger"></span>
                         </div>
