--- a/src/main/webapp/WEB-INF/views/templates/updateDiscipline.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateDiscipline.html
@@ -18,7 +18,7 @@
                         <div class="col"></div>
                         <div class="form-group col-md-6">
                             <label for="name" class="col-form-label">Name</label>
-                            <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name">
+                            <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name" required>
                             <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
                         </div>
                         <div class="col"></div>
