fix img/css available and cookie expire

--- a/src/main/webapp/WEB-INF/views/templates/lessonPupilsList.html
+++ b/src/main/webapp/WEB-INF/views/templates/lessonPupilsList.html
@@ -43,7 +43,8 @@
                             <div class="form-group col-md-2">
                                 <button type="submit" name="action" value="update" class="btn btn-success"><i
                                         class="far fa-edit"></i></button>
-                                <button type="submit" name="action" value="delete" class="btn btn-secondary" formnovalidate><i
+                                <button type="submit" name="action" value="delete" class="btn btn-secondary"
+                                        formnovalidate><i
                                         class="far fa-trash-alt"></i></button>
                             </div>
                             <div class="col"></div>
