--- a/src/main/webapp/WEB-INF/views/templates/updateAdmin.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateAdmin.html
@@ -17,7 +17,8 @@
                     <div class="row">
                         <div class="form-group col-md-6">
                             <label for="login" class="col-form-label">Login</label>
-                            <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login" required>
+                            <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login"
+                                   required>
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
