--- a/src/main/webapp/WEB-INF/views/templates/updatePupil.html
+++ b/src/main/webapp/WEB-INF/views/templates/updatePupil.html
@@ -17,7 +17,8 @@
                     <div class="row">
                         <div class="form-group col-md-6">
                             <label for="login" class="col-form-label">Login</label>
-                            <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login" required>
+                            <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login"
+                                   required>
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
@@ -51,7 +52,7 @@
                         <div class="form-group col-md-6">
                             <label for="classes" class="col-form-label">Class</label>
                             <select class="form-control" id="classes" th:field="*{aClass}" required>
-                                <option disabled selected value> -- </option>
+                                <option disabled selected value> --</option>
                                 <option th:each="aClass : ${classes}"
                                         th:value="${aClass.id}"
                                         th:text="${aClass.name}">
