--- a/src/main/webapp/WEB-INF/views/templates/fragment.html
+++ b/src/main/webapp/WEB-INF/views/templates/fragment.html
@@ -12,7 +12,7 @@
           integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
           integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/small_icon.png" th:href="@{/img/small_icon.png}">
+    <link rel="shortcut icon" href="../img/small_icon.png" th:src="@{img/small_icon.png}">
 </head>
 <body>
 <header th:fragment="header">
