--- a/src/main/webapp/WEB-INF/views/templates/updateAdmin.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateAdmin.html
@@ -19,14 +19,13 @@
                             <label for="login" class="col-form-label">Login</label>
                             <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login"
                                    required>
-                            <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
+                            <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" style="color: red"></span>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="password" class="col-form-label">Password</label>
                             <input type="password" th:field="*{password}" class="form-control" id="password"
                                    placeholder="Enter a new password" maxlength="10" required>
-                            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-                                  class="text-danger"></span>
+                            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
                         </div>
                     </div>
                     <div class="row">
