--- a/src/main/webapp/WEB-INF/views/templates/updateAClass.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateAClass.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-md-6">
-                <form action="#" th:action="@{/classes/updateClass/{id}(id=${class.id})}" th:object="${class}"
+                <form action="#" th:action="@{/classes/updateClass}" th:object="${class}"
                       method="post">
                     <div class="row">
                         <div class="col"></div>
@@ -24,6 +24,7 @@
                             <label for="name" class="col-form-label">Name</label>
                             <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name"
                                    required>
+                            <input type="hidden" th:field="*{id}" th:value="${class.id}">
                             <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></span>
                         </div>
                         <div class="col"></div>
