--- a/src/main/webapp/WEB-INF/views/templates/updateDiscipline.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateDiscipline.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-md-6">
-                <form action="#" th:action="@{/disciplines/updateDiscipline/{id}(id=${discipline.id})}"
+                <form action="#" th:action="@{/disciplines/updateDiscipline}"
                       th:object="${discipline}" method="post">
                     <div class="row">
                         <div class="col"></div>
@@ -20,6 +20,7 @@
                             <label for="name" class="col-form-label">Name</label>
                             <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name"
                                    required>
+                            <input type="hidden" th:field="*{id}" th:value="${discipline.id}">
                             <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></span>
                         </div>
                         <div class="col"></div>
