--- a/src/main/webapp/WEB-INF/views/templates/authentication.html
+++ b/src/main/webapp/WEB-INF/views/templates/authentication.html
@@ -23,6 +23,7 @@
                 <label for="inputPassword">Password</label>
                 <input type="password" name="password" class="form-control" id="inputPassword"
                        placeholder="Your password" maxlength="10" required>
+<!--                <span th:if="${errorText != null}" th:text="${errorText}" style="color: red"></span>-->
             </div>
             <input class="submit-btn btn btn-primary btn-block" type="submit" value="Sign In">
         </form>
