--- a/src/main/webapp/WEB-INF/views/templates/signUpDiscipline.html
+++ b/src/main/webapp/WEB-INF/views/templates/signUpDiscipline.html
@@ -20,6 +20,7 @@
                             <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name"
                                    required>
                             <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></span>
+                            <span th:if="${exceptMsg != null}" th:text="${exceptMsg}" style="color: red"></span>
                         </div>
                         <div class="col"></div>
                     </div>
