--- a/src/main/webapp/WEB-INF/views/templates/signUpParent.html
+++ b/src/main/webapp/WEB-INF/views/templates/signUpParent.html
@@ -12,14 +12,16 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-md-6">
-                <form action="#" th:action="@{/parents/signUpParent/{id}(id=${pupilId})}" th:object="${parent}"
+                <form action="#" th:action="@{/parents/signUpParent}" th:object="${parent}"
                       method="post">
                     <div class="row">
                         <div class="form-group col-md-6">
                             <label for="login" class="col-form-label">Login</label>
                             <input type="text" th:field="*{login}" class="form-control" id="login"
                                    placeholder="Login" required>
+                            <input type="hidden" name="pupil" th:value="${pupilId}">
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" style="color: red"></span>
+                            <span th:if="${exceptMsg != null}" th:text="${exceptMsg}" style="color: red"></span>
                         </div>
 
                         <div class="form-group col-md-6">
