--- a/src/main/webapp/WEB-INF/views/templates/signUpPupil.html
+++ b/src/main/webapp/WEB-INF/views/templates/signUpPupil.html
@@ -19,6 +19,7 @@
                             <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login"
                                    required>
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" style="color: red"></span>
+                            <span th:if="${exceptMsg != null}" th:text="${exceptMsg}" style="color: red"></span>
                         </div>
 
                         <div class="form-group col-md-6">
@@ -47,7 +48,6 @@
                         <div class="form-group col-md-6">
                             <label for="classes" class="col-form-label">Class</label>
                             <select class="form-control" id="classes" th:field="*{aClass}" required>
-                                <option disabled selected value> --</option>
                                 <option th:each="aClass : ${classes}"
                                         th:value="${aClass.id}"
                                         th:text="${aClass.name}">
