--- a/src/main/webapp/WEB-INF/views/templates/updateAClass.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateAClass.html
@@ -26,6 +26,7 @@
                                    required>
                             <input type="hidden" th:field="*{id}" th:value="${class.id}">
                             <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></span>
+                            <span th:if="${exceptMsg != null}" th:text="${exceptMsg}" style="color: red"></span>
                         </div>
                         <div class="col"></div>
                     </div>
