--- a/src/main/webapp/WEB-INF/views/templates/updateAdmin.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateAdmin.html
@@ -21,6 +21,7 @@
                                    required>
                             <input type="hidden" th:field="*{id}" th:value="${admin.id}">
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" style="color: red"></span>
+                            <span th:if="${exceptMsg != null}" th:text="${exceptMsg}" style="color: red"></span>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="password" class="col-form-label">Password</label>
