--- a/src/main/webapp/WEB-INF/views/templates/updateTeacher.html
+++ b/src/main/webapp/WEB-INF/views/templates/updateTeacher.html
@@ -31,6 +31,7 @@
                             <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login" required>
                             <input type="hidden" th:field="*{id}" th:value="${teacher.id}">
                             <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" style="color: red"></span>
+                            <span th:if="${exceptMsg != null}" th:text="${exceptMsg}" style="color: red"></span>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="password" class="col-form-label">Password</label>
